# langchain-mcp-agent

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml
src/langgraph_mcp_agent/: cli.py  main.py
src/langgraph_mcp_agent/agents/: coordination_agent.py  decision_agent.py  expert_agent.py
src/langgraph_mcp_agent/api/: server.py
src/langgraph_mcp_agent/config/: mcp_config.json  settings.py
src/langgraph_mcp_agent/core/: conversation_state.py  data_processor.py  llm_manager.py  mcp_manager.py  session_manager.py
src/langgraph_mcp_agent/graph/: state_graph.py
src/langgraph_mcp_agent/utils/: exceptions.py  logger.py
