[project]
name = "langgraph-mcp-agent"
version = "0.2.0"
description = "基于LangGraph的多层Agent架构系统"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-anthropic>=0.2.0",
    "langchain-google-genai>=2.0.0",
    "langchain-community>=0.3.0",
    "langchain-mcp-adapters>=0.1.0",
    "mcp>=0.1.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "aiohttp>=3.9.0",
    "asyncio>=3.4.3",
    "rich>=13.0.0",
    "tenacity>=8.0.0",
    "structlog>=24.0.0",
    "fastmcp>=0.1.0",
    "langchain-core>=0.3.72",
    "dotenv>=0.9.9",
    "fastapi>=0.116.1",
    "pytest>=8.4.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "black>=24.0.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "ipython>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
index-url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
